--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -26,7 +26,7 @@ RUN pip install -r requirements.txt
 ENV LC_ALL=C.UTF-8 \
     LANG=C.UTF-8
     
-#WORKDIR /docs
+WORKDIR /docs
 
 
 # Create the image version files for reference
