--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -18,11 +18,13 @@ FROM ubuntu:16.04
 # MAINTAINER 
 
 # Add PIP .. PIP already in slave-base!
-RUN apt-get update && apt-get install -y --no-install-recommends git python3 python3-pip openssh-server
+RUN apt-get update && apt-get install -y --no-install-recommends git python3 python3-pip openssh-server \
+    && rm -rf /var/lib/apt/lists/* \
+    && pip3 install --upgrade pip 
 
 # Add MkDocs and dependencies
 COPY requirements.txt /tmp/
-RUN pip install --requirement /tmp/requirements.txt
+RUN pip3 install --requirement /tmp/requirements.txt
 COPY . /tmp/
 
 ENV LC_ALL=C.UTF-8 \
