--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -18,7 +18,7 @@ FROM ubuntu:16.04
 # MAINTAINER 
 
 # Add PIP .. PIP already in slave-base!
-RUN apt-get update && apt-get install -y --no-install-recommends git python3 python3-pip openssh-server \
+RUN apt-get update && apt-get install -y --no-install-recommends git python3 python3-pip python-setuptools openssh-server \
     && rm -rf /var/lib/apt/lists/* \
     && pip3 install --upgrade pip 
 
