--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -20,7 +20,8 @@ FROM ubuntu:16.04
 # Add PIP .. PIP already in slave-base!
 RUN apt-get update && apt-get install -y --no-install-recommends git python3 python3-pip python-setuptools openssh-server \
     && rm -rf /var/lib/apt/lists/* \
-    && pip3 install --upgrade pip 
+    && pip3 install --upgrade pip \
+    && pip3 install -U setuptools
 
 # Add MkDocs and dependencies
 COPY requirements.txt /tmp/
