--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -18,7 +18,7 @@ FROM ubuntu:16.04
 # MAINTAINER 
 
 # Add PIP .. PIP already in slave-base!
-RUN apt-get update && apt-get install -y --no-install-recommends git python3 python3-pip python-setuptools openssh-server \
+RUN apt-get update && apt-get install -y --no-install-recommends python3 python3-pip python-setuptools \
     && rm -rf /var/lib/apt/lists/* \
     && pip3 install --upgrade pip \
     && pip3 install -U setuptools
@@ -32,9 +32,3 @@ ENV LC_ALL=C.UTF-8 \
     LANG=C.UTF-8
     
 WORKDIR /docs
-
-
-# Create the image version files for reference
-#RUN mkdir -p docker \
-#    && echo "@@DOCKER_IMAGE_VERSION@@" > docker/@@DOCKER_IMAGE_NAME@@.version \
-#    && echo "@@DOCKER_IMAGE_NAME@@:@@DOCKER_IMAGE_VERSION@@" > docker/image.version
