--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -18,7 +18,7 @@ FROM ubuntu:16.04
 # MAINTAINER 
 
 # Add PIP .. PIP already in slave-base!
-RUN apt-get update && apt-get install -y --no-install-recommends python3 python3-pip python-setuptools \
+RUN apt-get update && apt-get install -y --no-install-recommends python3 python3-pip python-setuptools openjdk-8-jdk \
     && rm -rf /var/lib/apt/lists/* \
     && pip3 install --upgrade pip \
     && pip3 install -U setuptools
