--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -17,7 +17,7 @@ FROM ubuntu:16.04
 MAINTAINER runtimesid <jtcid@uk.ibm.com> 
 
 # Set up for SSH (including SSH login fix to prevent user being logged out) and add PIP 
-RUN apt-get update && apt-get install -y --no-install-recommends python3 python3-pip python-setuptools \
+RUN apt-get update && apt-get install -y --no-install-recommends python3 python3-pip python-setuptools git \
     && DEBIAN_FRONTEND="noninteractive" apt-get -q upgrade -y -o Dpkg::Options::="--force-confnew" --no-install-recommends \
     && DEBIAN_FRONTEND="noninteractive" apt-get -q install -y -o Dpkg::Options::="--force-confnew" --no-install-recommends openssh-server \
     && rm -rf /var/lib/apt/lists/* \
@@ -38,9 +38,9 @@ RUN  useradd -m -d /home/jenkins -s /bin/sh jenkins \
     && echo "jenkins:jenkinspass" | chpasswd \
 	export PATH=/root/.local/bin:$PATH
 
-ENV LC_ALL=C.UTF-8 \
-    LANG=C.UTF-8 
-
+ENV LC_ALL=C.UTF-8
+ENV LANG=C.UTF-8 
+ENV PATH /root/.local/bin:$PATH
 
 # Standard SSH port
 EXPOSE 22
