--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -17,7 +17,7 @@ FROM ubuntu:16.04
 MAINTAINER runtimesid <jtcid@uk.ibm.com> 
 
 # Set up for SSH (including SSH login fix to prevent user being logged out) and add PIP 
-RUN apt-get update && apt-get install -y --no-install-recommends python3 python3-pip python-setuptools git \
+RUN apt-get update && apt-get install -y --no-install-recommends python3 python3-pip python-setuptools openjdk-8-jdk git \
     && DEBIAN_FRONTEND="noninteractive" apt-get -q upgrade -y -o Dpkg::Options::="--force-confnew" --no-install-recommends \
     && DEBIAN_FRONTEND="noninteractive" apt-get -q install -y -o Dpkg::Options::="--force-confnew" --no-install-recommends openssh-server \
     && rm -rf /var/lib/apt/lists/* \
