--- a/test/requirements.txt
+++ b/test/requirements.txt
@@ -1,17 +1,14 @@
 # mkdocs and dependencies
 #
-backports-abc==0.5        # via tornado
-certifi==2017.4.17        # via tornado
 click==6.7                # via mkdocs
-jinja2==2.9.6             # via mkdocs
+jinja2==2.10              # via mkdocs
 livereload==2.5.1         # via mkdocs
-markdown==2.6.8           # via mkdocs, pymdown-extensions
+markdown==2.6.11           # via mkdocs, pymdown-extensions
 markupsafe==1.0           # via jinja2
-mkdocs-material==1.6.1
-mkdocs==0.16.3            # via mkdocs-material
-pygments==2.2.0           # via mkdocs-material
-pymdown-extensions==3.0   # via mkdocs-material
+mkdocs-material==2.6.3
+mkdocs==0.17.2
+pygments==2.2.0
+pymdown-extensions==4.8   # via mkdocs-material
 pyyaml==3.12              # via mkdocs
-singledispatch==3.4.0.3   # via tornado
-six==1.10.0               # via livereload, singledispatch
-tornado==4.5.1            # via livereload, mkdocs
+six==1.11.0               # via livereload
+tornado==4.5.3            # via livereload, mkdocs
